--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,21 @@
-version: '3.8'
-
 services:
   influxdb:
     image: influxdb:latest
     container_name: influxdb
     environment:
-      - INFLUXDB_HTTP_AUTH_ENABLED=true
-      - INFLUXDB_ADMIN_USER=admin
-      - INFLUXDB_ADMIN_PASSWORD=hackme
+      - DOCKER_INFLUXDB_INIT_MODE=setup
+      - DOCKER_INFLUXDB_INIT_USERNAME=${DOCKER_INFLUXDB_INIT_USERNAME}
+      - DOCKER_INFLUXDB_INIT_PASSWORD=${DOCKER_INFLUXDB_INIT_PASSWORD}
+      - DOCKER_INFLUXDB_INIT_ORG=${INFLUXDB_ORG}
+      - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUXDB_BUCKET}
+      - DOCKER_INFLUXDB_INIT_RETENTION=0
     volumes:
       - influxdb-data:/var/lib/influxdb
       - influxdb-ssl:/etc/ssl/influxdb
     networks:
       - private-network
+    ports:
+      - "8086:8086"  # API Port
 
   grafana:
     image: grafana/grafana-enterprise
