Add Caddy Server Configuration

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Icecast Server Configuration
-ICECAST_URL=https://icecast.zuidwestfm.nl
-ICECAST_HOST=icecastzwfm  # Host identifier for logging and InfluxDB tagging
+ICECAST_URL=https://icecast.example.org
+ICECAST_HOST=icecastexample  # Host identifier for logging and InfluxDB tagging
 ICECAST_USERNAME=admin
 ICECAST_PASSWORD=
 
@@ -12,5 +12,9 @@ INFLUXDB_BUCKET=your_bucket
 INFLUXDB_PRECISION=ms  # Precision of the timestamps in InfluxDB (ms for milliseconds)
 
 # InfluxDB Initialization (used during container setup)
-DOCKER_INFLUXDB_INIT_USERNAME=admin  # Initial username for InfluxDB setupååœ
+DOCKER_INFLUXDB_INIT_USERNAME=admin  # Initial username for InfluxDB setup
 DOCKER_INFLUXDB_INIT_PASSWORD=hackme  # Initial password for InfluxDB setup
+
+# Caddy Server Configuration
+CADDY_HOSTNAME=grafana.example.org
+CADDY_EMAIL=ssl@example.org
